Basic html elements completed

--- a/htmlElements/basicHTML/body.html
+++ b/htmlElements/basicHTML/body.html
@@ -12,25 +12,26 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Body - &lt;body&gt;</h1>
+    <p>This element defines the documents body. It contains all the contents visible to the user. Such as headings paragrapsh, hyperlinks, tables,lists etc.</p>
+    <p>There can only be one body element in a document.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
-    <p>This is how its coded:</p>
-    <img src="">
+    <p>Here is the body of this webpage:</p>
+    <img src="./media/examples/bodyExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/bodyDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported</p>
     
 </body>
 </html>
