--- a/htmlElements/basicHTML/br.html
+++ b/htmlElements/basicHTML/br.html
@@ -12,13 +12,24 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>BR - &lt;br&gt;</h1>
+    <p>This element inserts a single line break</p>
+    <p>This is usefull for writing addresses or poems.</p>
+    <p>This tag is an empty tag which means it has no end tag.</p>
+    <p>This element should be used to enter line breaks, not to add space between paragraphs.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>Here is a br tag inbetween two block level elements(paragraphs):</p>
+    <p>Paragraph 1</p>
+    <br>
+    <p>Paragraph 2</p>
+    
+    <p>Here is a br tag between to inline elements(span):</p>
+    <span>Span 1</span>
+    <br>
+    <span>Span 2</span>
     <p>This is how its coded:</p>
     <img src="">
 
@@ -30,7 +41,8 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
