--- a/htmlElements/basicHTML/comment.html
+++ b/htmlElements/basicHTML/comment.html
@@ -12,15 +12,18 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Comment - &lt;!--...--&gt;</h1>
+    <p>The comment element is used to insert comments into the source code. Comments are not displayed on the webpage.</p>
+    <p>You can use comments to explain your code, which can help you when you edit the source code at a later date. This is especially useful if you have alot of code.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <!-- This is a comment -->
+    <!-- This is a multi-line comment.
+    Another line! -->
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/commentExample.png">
 
     <br>
 
@@ -30,7 +33,7 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>No attributes are supported</p>
     
 </body>
 </html>
