--- a/htmlElements/basicHTML/docType.html
+++ b/htmlElements/basicHTML/docType.html
@@ -6,31 +6,21 @@
     <meta name="author" content="Stephen Mogg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>&lt;docType&gt;</title>
+    <title>&lt;!DOCTYPE&gt;</title>
 </head>
 
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>DocType - &lt;!DOCTYPE&gt;</h1>
+    <p>All html documents must start with a doctype declaration</p>
+    <p>The declaration is not a html tag. Its actually information to the browser about what document type to expect.</p>
+    <p>The doctype declaration is not case sensitive.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
-    <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/doctypeExample.png">
 
-    <br>
-
-    <h2>Default Styling:</h2>
-    <p>None</p>
-
-    <br>
-
-    <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
-    
 </body>
 </html>
