--- a/htmlElements/basicHTML/h1.html
+++ b/htmlElements/basicHTML/h1.html
@@ -12,25 +12,38 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>H1-H6 - &lt;h1&gt;-&lt;h6&gt;</h1>
+    <p>These elements are tags to define html headings.</p>
+    <p>Obviously h1 defines more important headings and h6 defines the least important headings.</p>
+    <p>Use only one h1 per page. Try not to skip heading levels either as this can mess the structure of a webpage up.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <h1>H1</h1>
+    <h2>H2</h2>
+    <h3>H3</h3>
+    <h4>H4</h4>
+    <h5>H5</h5>
+    <h6>H6</h6>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/h1Example.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/h1Default.png" alt="">
+    <img src="./media/defaultStyles/h2Default.png" alt="">
+    <img src="./media/defaultStyles/h3Default.png" alt="">
+    <img src="./media/defaultStyles/h4Default.png" alt="">
+    <img src="./media/defaultStyles/h5Default.png" alt="">
+    <img src="./media/defaultStyles/h6Default.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
