--- a/htmlElements/basicHTML/head.html
+++ b/htmlElements/basicHTML/head.html
@@ -12,20 +12,28 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Head - &lt;head&gt;</h1>
+    <p>The head element usually is a container for metadata. (data about data) and is placed between the html and body tag.</p>
+    <p>Metadata is data about the html document. Metadata is not displayed</p>
+    <p>This data typically defines the document title, character set, styles, scripts and other meta information</p>
+    <p>The following elements can go inside the head element.</p>
+    <li>title</li>
+    <li>style</li>
+    <li>base</li>
+    <li>link</li>
+    <li>meta</li>
+    <li>script</li>
+    <li>noscript</li>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
-    <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/headExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/headDefault.png" alt="">
 
     <br>
 
