--- a/htmlElements/basicHTML/title.html
+++ b/htmlElements/basicHTML/title.html
@@ -12,25 +12,36 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Title - &lt;title&gt;</h1>
+    <p>This element defines the title of the document. The title must be text only and is shown in the browsers title bar or in the page's tab.</p>
+    <p>The title tag is required in all documents.</p>
+    <p>The contents of the title are important for search engine optimization so they can decide the listing of the pages in search results.</p>
+    
+    <p>The title element:</p>
+    <li>Defines the title in the browser toolbar</li>
+    <li>Provides the title for trhe page when it is added to favourites</li>
+    <li>Displays a title for the page in search enigne results.</li>
+    <p>Tips for creating good titles:</p>
+    <li>Go for longer descriptive title(avoid one or two word titles)</li>
+    <li>Search engines will display about 50-60 characters of the title so try not to have titles longer than that</li>
+    <li>Do not use just a list of words as the title.(This may reduce the pages position in search results)</li>
+    <p>Make the title as accurate and as meaningingfull as possible.</p>
 
     <br>
 
-    <h2>Examples:</h2>
-    <img src="">
-    <p>This is how its coded:</p>
-    <img src="">
+    <h2>Examples:</h2>A
+    <p>This is the title of this page:</p>
+    <img src="./media/examples/titleExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/titleDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
     
 </body>
 </html>
