--- a/htmlElements/stylesAndSemantics/style.html
+++ b/htmlElements/stylesAndSemantics/style.html
@@ -10,7 +10,7 @@
 </head>
 
 <!-- &lt; &gt; -->
-<style>
+<style media="">
     h3 {color:red}
     h4 {color:blue}
     .pStyle {color:green}
@@ -50,10 +50,13 @@
         <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
     </p>
     <p>The style tag has 2 other attributes:</p>
-    <p> - Media attribute. This attribute allows for a desired media device that the styling is to be suited best for.</p>
+    <p> - Media attribute</p>
+    <p>This attribute allows for a desired media device that the styling is to be suited best for.</p>
+    <p>It can accept several values using "and", "not" and "," operators</p>
     <a href="https://www.w3schools.com/tags/att_style_media.asp"> - Further Media Attribute Information</a>
-    <p> - Type attribute. This attribute helps specify the content between the style tags. Default is text/css</p>
-    <a href="https://www.w3schools.com/tags/tag_style.asp"> - Further Type Attribute information</a>
+    <p> - Type attribute</p>
+    <p>This attribute helps specify the content between the style tags. Default is text/css</p>
+    <a href="https://www.w3schools.com/tags/att_style_type.asp"> - Further Type Attribute information</a>
 
 </body>
 </html>
