--- a/lessonsLearned.html
+++ b/lessonsLearned.html
@@ -310,5 +310,28 @@
         <p>This is because some function names are not allowed to work or be triggered as i think they are used elsewhere as a function name.</p>
         <p>Simply changing the name or adding some extra letters on the end of the function name fixes this.</p>
     </details>
+    <details>
+        <summary>Head element content that should be in every web document.</summary>
+
+        <p>The title element is required to be included!</p>
+        <li>Search engines use this to decide the listing of the webpage in search results.</li>
+        <li>Allows the browser to define a title in the toolbar.</li>
+        <li>This provides a title for when the page is added to favourites</li>
+        <li>This displays a title for the page in search engine results.</li>
+
+        <p>There should always be meta tags for the following information.</p>
+        <li>Define the character set. This is mostly utf-8</li>
+        <li>Define keywords for search engines.</li>
+        <li>Define a description for the webpage.</li>
+        <li>Define the author of the webpage.</li>
+        <li>Refresh the document every 30 seconds.</li>
+        <li>Set the viewport width so the website looks good on all devices.</li>
+        
+        <p>The following meta tag that is incorporated with emmet shortcuts to quickly set up a website should only be used for supporting legacy browsers. Consult <a href="https://stackoverflow.com/questions/6771258/what-does-meta-http-equiv-x-ua-compatible-content-ie-edge-do">this</a> webpage for more information.</p>
+        <li>&lt; meta http-equiv="X-UA-Compatible" content="IE=edge"&gt;</li>
+
+        <p>The following image displays head element content that should be included for every webpage.</p>
+        <img src="./0media/images/lessonsLearned/headElement/headExample.png" alt="">
+    </details>
 </body>
 </html>
