--- a/htmlElements/basicHTML/hr.html
+++ b/htmlElements/basicHTML/hr.html
@@ -12,25 +12,34 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>HR - &lt;hr&gt;</h1>
+    <p>The hr element defines a thematic break in a html document.(A shift of topic)</p>
+    <p>The hr element is most oftenly displayed as a horizontal rule that is used to seperate content in a html page.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>paragraph</p>
+    <hr>
+    <p>paragraph</p>
+
+    <span>span</span>
+    <hr>
+    <span>span</span>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/hrExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/hrDefault.png" alt="">
+    <p>You can easily change the width of this to make it display less of the breakline.</p>
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
