--- a/htmlElements/basicHTML/html.html
+++ b/htmlElements/basicHTML/html.html
@@ -14,24 +14,26 @@
 <body>
 
     <h1>Html - &lt;html&gt;</h1>
-    <p></p>
+    <p>This element represents the root of the html document.</p>
+    <p>The html tag is the container for all other html elements.(except the !doctype element ofc)</p>
+    <p>You should always include the lang attribute inside the html element in order to declare the language of the page. This assists search engines and browsers.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/htmlExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/htmlDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
     <p>The global attribute is supported.</p>
+    <p>xmlns - specifies the xml namespace attribute when needing to conform to XHTML</p>
     
 </body>
 </html>
