--- a/htmlElements/basicHTML/p.html
+++ b/htmlElements/basicHTML/p.html
@@ -12,25 +12,27 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>P - &lt;p&gt;</h1>
+    <p>The p element defines a paragraph</p>
+    <p>Browsers automatically add a single blank line before and after each paragraph element.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>I am a paragraph</p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/paragraphExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/pDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The eventattributes are supported.</p>
     
 </body>
 </html>
