--- a/htmlEventAttributes/htmlEventAttributes.html
+++ b/htmlEventAttributes/htmlEventAttributes.html
@@ -8,24 +8,24 @@
     <title>HTML Event Attributes</title>
 </head>
 <body>
-    <h1>Html Event Attributes</H1>
+    <h1>Html Event Attributes</h1>
     <p>These events allow for a script to be run on specific actions on the page.</p>
     
     <nav>
         <a href="./clipboardEventAttributes/clipboardEventAttributes.html">Clipboard event attributes</a>
-        <span>||</span>
+        <br>
         <a href="./dragEventAttributes/dragEventAttributes.html">Drag event Attributes</a>
-        <span>||</span>
+        <br>
         <a href="./formEventAttributes/formEventAttributes.html">Form event attributes</a>
-        <span>||</span>
+        <br>
         <a href="./keyboardEventAttributes/keyboardEventAttributes.html">Keyboard event attributes</a>
-        <span>||</span>
+        <br>
         <a href="./mediaEventAttributes/mediaEventAttributes.html">Media event attributes</a>
-        <span>||</span>
+        <br>
         <a href="./mouseEventAttributes/mouseEventAttributes.html">Mouse event attributes</a>
-        <span>||</span>
+        <br>
         <a href="./miscEventAttributes/miscEventAttributes.html">Misc event attributes</a>
-        <span>||</span>
+        <br>
         <a href="./windowEventAttributes/windowEventAttributes.html">Window event attributes</a>
     </nav>
 
