list elements completed

--- a/htmlElements/lists/dl.html
+++ b/htmlElements/lists/dl.html
@@ -12,25 +12,33 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>DL - &lt;dl&gt;</h1>
+    <p>This element defines a description list.</p>
+    <p>This is used in conjunction with the dt element.</p>
+    <p>dt defines terms/names whereas dd defines each term/name.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <dl>
+        <dt>Lexus</dt>
+        <dd>is200 silver</dd>
+        <dt>Vauxhall</dt>
+        <dd>Corsa Red</dd>
+    </dl>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/dlExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/dlDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
