--- a/htmlElements/lists/li.html
+++ b/htmlElements/lists/li.html
@@ -12,25 +12,32 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>LI - &lt;li&gt;</h1>
+    <p>The li element defines a list item. It should be used inside of ol, ul or menu elements.</p>
+    <p>The list item will contain either a bullet point or a number dependant on the element its nested inside.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <ol>
+        <li value="100">list item 1</li>
+        <li>list item 2</li>
+        <li>list item 3</li>
+    </ol>
     <p>This is how its coded:</p>
     <img src="">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/liDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>value - specifies the start value of a list item. </p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
