--- a/htmlElements/lists/ol.html
+++ b/htmlElements/lists/ol.html
@@ -12,25 +12,35 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>OL - &lt;ol&gt;</h1>
+    <p>The ol element defines an ordered list. This can be numberical or alphabetical.</p>
+    <p>The li element is used to define each list item.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <ol reversed start="10" type="i">   
+        <li>ordered list item 1</li>
+        <li>ordered list item 2</li>
+        <li>ordered list item 3</li>
+        <li>ordered list item 4</li>
+    </ol>
     <p>This is how its coded:</p>
     <img src="">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/olDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>reversed - specifies the order shoudl be reversed</p>
+    <p>start - specifies the start value of an ordered list</p>
+    <p>type - specifies the kind of marker to use in the list</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
