--- a/htmlElements/lists/ul.html
+++ b/htmlElements/lists/ul.html
@@ -12,25 +12,31 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>UL - &lt;ul&gt;</h1>
+    <p>The ul element tag defines an unordered list. Using the ul and li elements together creates a full unordered list.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <ul>   
+        <li>unordered list item 1</li>
+        <li>unordered list item 2</li>
+        <li>unordered list item 3</li>
+        <li>unordered list item 4</li>
+    </ul>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/ulExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/ulDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
