--- a/htmlElements/lists/dd.html
+++ b/htmlElements/lists/dd.html
@@ -12,25 +12,33 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>DD - &lt;dd&gt;</h1>
+    <p>The dd element element is used to describe an individual term/name in a description list.</p>
+    <p>The dd element is used in conjunction with the dl element which describes a description list and dt which describes terms/ names</p>
+    <p>You can put paragraphs line breaks, images, links, lists in this element.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <dl>
+        <dt>Lexus</dt>
+        <dd>is200 silver</dd>
+        <dt>Vauxhall</dt>
+        <dd>Corsa Red</dd>
+    </dl>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/dlExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/ddDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
