lists actually completed

--- a/htmlElements/lists/li.html
+++ b/htmlElements/lists/li.html
@@ -25,7 +25,7 @@
         <li>list item 3</li>
     </ol>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/liExample.png">
 
     <br>
 
