--- a/htmlElements/lists/ol.html
+++ b/htmlElements/lists/ol.html
@@ -26,7 +26,7 @@
         <li>ordered list item 4</li>
     </ol>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/olExample.png">
 
     <br>
 
