Link elements completed

--- a/htmlElements/links/a.html
+++ b/htmlElements/links/a.html
@@ -12,25 +12,50 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>A - &lt;a&gt;</h1>
+    <p>The a element defines a hyperlink which is used to link from one page to another.</p>
+    <p>The most important attribute of the a element is the href attribute. This indicates the links destination.</p>
+    <p>By default, links will appear as follows in all browsers:</p>
+    <li>An unvisited link is underlines and blue.</li>
+    <li>A visited link is underlined and purple</li>
+    <li>An active link is underlined and red.</li>
 
-    <br>
+    <p>If this element has no href attribute it will only be placeholder for a hyperlink. A linked page is usually displayed in the current window unless specified otherwise.</p>
 
     <h2>Examples:</h2>
-    <img src="">
-    <p>This is how its coded:</p>
-    <img src="">
+    <p>Link to javascript</p>
+    <img src="./media/examples/aJavascriptExample.png">
+    <p>Link to phone number</p>
+    <img src="./media/examples/aNumberExample.png">
+    <p>Link to email address</p>
+    <img src="./media/examples/aEmailExample.png">
+    <p>Link to another section</p>
+    <img src="./media/examples/aSectionExample.png">
+    <p>Open new window</p>
+    <img src="./media/examples/aNewWindowExample.png">
+    <p>Use image as a link</p>
+    <img src="./media/examples/aImageLinkExample.png">
+    
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/aDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>download - This allows the target to be downloaded instead of taken to the target</p>
+    <p>href - Specifies the url</p>
+    <p>hreflang - specifies the language code of the linked document.</p>
+    <p>media - specifies the media device linked document is optimized for.</p>
+    <p>ping - specifies a space seperated list of urls to which when followed will post requests to be used for tracking.</p>
+    <p>referrerpolicy - specifies the referrer information to send with the link.</p>
+    <p>rel - specifies the relationship between the current document and the linked document.</p>
+    <p>target - specifies where to target the linked document</p>
+    <p>type - specifies the media type of the linked document.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
