--- a/htmlElements/links/link.html
+++ b/htmlElements/links/link.html
@@ -12,25 +12,35 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Link - &lt;link&gt;</h1>
+    <p>This element defines a relationship between the current document and an external resource to be used.</p>
+    <p>It is most often used to link to an external stylesheet or to add a favicon to a website</p>
+    <p>The link element is an empty element, it only contains attributes.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
-    <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/linkExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/linkDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>crossorigin - Specifies how the element handles cross origin requests.</p>
+    <p>href - specifies the location of the linked document.</p>
+    <p>hreflang -specifies the language of the text in the linked document.</p>
+    <p>media - specifies on what device the linked document will be displayed.</p>
+    <p>referrerpolicy - specifies which referrer to use when fetching the resource.</p>
+    <p>rel - This is required and specifies the relationship between the content and the linked document.</p>
+    <p>sizes -Specifies the size of the linked resource. this is only for "rel="icon""</p>
+    <p>title - defines a preffered or an alternate stylesheet.</p>
+    <p>type - specifies the media type of the linked document.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
