--- a/htmlElements/links/nav.html
+++ b/htmlElements/links/nav.html
@@ -12,25 +12,31 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Nav - &lt;nav&gt;</h1>
+    <p>This elements defines a set of navigation links</p>
+    <p>Not all links of a document should go inside of a nav element however the major navigation links for the website should be found here</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <nav>
+        <a href="www.google.com">link1</a>
+        <a href="www.google.com">link2</a>
+        <a href="www.google.com">link3</a>
+    </nav>
     <p>This is how its coded:</p>
     <img src="">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/navDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
