--- a/htmlElements/images/figCaption.html
+++ b/htmlElements/images/figCaption.html
@@ -12,25 +12,30 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>FigCaption - &lt;figcaption&gt;</h1>
+    <p>This element is used to define a caption for a figure element.</p>
+    <p>The figure element can be placed as the first or last child of the figure element.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <figure>
+        <img src="./media/examples/pic_trulli.jpg" alt="Trulli" style="width:50%">
+        <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+    </figure>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/figcaptionExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/figcaptionDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
