--- a/htmlElements/images/figure.html
+++ b/htmlElements/images/figure.html
@@ -12,25 +12,31 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Figure - &lt;figure&gt;</h1>
+    <p>The figure element specifies self contained content, like illustrations, diagrams, photos, code listings etc.</p>
+    <p>While the content of the figure elementis related to the main flow, its position is independant of the main flow and if removed it should not affect the flow of the document.</p>
+    <p>The figcaption element is used to add a caption of the figure element.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <figure>
+        <img src="./media/examples/pic_trulli.jpg" alt="Trulli" style="width:50%">
+        <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+    </figure>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples//figcaptionExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/figureDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
