--- a/htmlElements/images/picture.html
+++ b/htmlElements/images/picture.html
@@ -12,8 +12,11 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Picture - &lt;picture&gt;</h1>
+    <p>The picture element gives developers more flexebility in specifying image resource.</p>
+    <p>The most common use of the picture element will be for art direction in responsive designs. Instead of having one image that is scaled up or down based on the viewport width, multiple images can be designed to fill the browser viewport much more nicely.</p>
+    <p>The picture element contains two tags, one or more source tags and an image tag.</p>
+    <p>The </p>
 
     <br>
 
@@ -30,7 +33,8 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
