--- a/htmlElements/images/svg.html
+++ b/htmlElements/images/svg.html
@@ -12,7 +12,7 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
+    <h1>Svg - &lt;svg&gt;</h1>
     <p></p>
 
     <br>
@@ -30,7 +30,7 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>None</p>
     
 </body>
 </html>
