--- a/htmlElements/images/map.html
+++ b/htmlElements/images/map.html
@@ -12,7 +12,7 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
+    <h1>Map - &lt;map&gt;</h1>
     <p></p>
 
     <br>
@@ -25,12 +25,13 @@
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/mapDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
