--- a/css/cssLesson.html
+++ b/css/cssLesson.html
@@ -30,21 +30,29 @@
 </head>
 <body>
     <header>
-        <h1>HEADER</h1>
-        <p>Page to showcase understanding of css position attributes.</p>
+        <h1>CSS Showcase</h1>
+        <p>Page to showcase working examples of css attributes:</p>
     </header>
     <nav class="sticky">
-        <a class="home" href="">Link 1</a>
+        <a class="active" href="">Link 1</a>
         <a href="">Link 2</a>
         <a href="">Link 3</a>
     </nav>
+    <h2>Working attributes:</h2>
+    <ul>
+        <li>Position attributes.(sticky and relative)</li>
+        <li>background-image attribute.</li>
+        <li>display flex</li>
+        <li>link state styling</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+    <div class="border">Rounded border</div>
     
-    <section>asd</section>
-    <section>asd</section>
-    <section>asd</section>
-    <section>asd</section>
-    <section>asd</section>
-    <section>asd</section>
 
 </body>
 </html>
