--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         <a href="./htmlGlobalAttributes/htmlGlobalAttributes.html">Html Global Attributes</a>
         <span>||</span>
         <a href="./htmlEventAttributes/htmlEventAttributes.html">Html Event Attributes</a>  
+        <span>||</span>
+        <a href="./css/cssLesson.html">CSS</a>
+        <span>||</span>
+        <a href="./javascript/javascriptLesson.html">Javascript</a>
+
     </nav>
 
     <p>The progression of the website follows as:</p>
