Image elements almost completed

--- a/htmlElements/htmlElements.html
+++ b/htmlElements/htmlElements.html
@@ -99,7 +99,7 @@
     <nav>
         <a href="images/img.html"> &lt;img&gt; </a> |
         <a href="images/map.html"> &lt;map&gt; </a> |
-        <a href="images/area"> &lt;area&gt; </a> |
+        <a href="images/area.html"> &lt;area&gt; </a> |
         <a href="images/canvas.html"> &lt;canvas&gt; </a> |
         <a href="images/figCaption.html"> &lt;figcaption&gt; </a> |
         <a href="images/figure.html"> &lt;figure&gt; </a> |
