--- a/htmlElements/images/area.html
+++ b/htmlElements/images/area.html
@@ -13,7 +13,9 @@
 <body>
 
     <h1>Area - &lt;area&gt;</h1>
-    <p></p>
+    <p>The area element defines an area inside of an image map.</p>
+    <p>Area elements are always associated inside of a map tag.</p>
+    <p>The usemap attribute in the img element is associated with the map elements name attribute. This creates a relationship between the image and the map.</p>
 
     <br>
 
@@ -30,6 +32,17 @@
     <br>
 
     <h2>Attributes:</h2>
+    <p>alt - Specifies an alternate text for the area.</p>
+    <p>coords - Specifies the coordinates of the area</p>
+    <p>download - Specifies that the target will be downloaded when a user clicks on the hyperlink</p>
+    <p>href - Specifies the hyperlink target for the area</p>
+    <p>hreflang - Specifies the language of the target url</p>
+    <p>media - Specifies what media/device the target URL is optimized for</p>
+    <p>referrerpolicy - Specifies which referrer information to send with the link</p>
+    <p>rel - Specifies the relationship between the current document and the target URL</p>
+    <p>shape - Specifies the shape of the area</p>
+    <p>target - Specifies where to open the target URL</p>
+    <p>type - Specifies the media type of the target URL</p>
     <p>The global attributes are supported.</p>
     <p>The event attributes are supported.</p>
     
