--- a/htmlElements/images/area.html
+++ b/htmlElements/images/area.html
@@ -20,9 +20,14 @@
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <img src="./media/images/areaPicture.png" alt="Workplace" usemap="#workmap" width="400" height="379">
+    <map name="workmap">
+        <area shape="rect" coords="34,44,270,350" alt="Computer" href="">
+        <area shape="rect" coords="290,172,333,250" alt="Phone" href="">
+        <area shape="circle" coords="337,300,44" alt="Cup of coffee" href="">
+    </map>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/areaExample.png">
 
     <br>
 
